test/errors/resolution/invalidNewTarget.chpl
// var x = new int();
enum E { bla }
var y = new owned E();
